--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "compare-your-air",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.31",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.3",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
-  }
+    "name": "compare-your-air",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format:check": "npx prettier --check src/",
+        "format:write": "npx prettier --write src/"
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.6.1",
+        "luxon": "^2.3.2",
+        "next": "12.1.6",
+        "react": "18.1.0",
+        "react-dom": "18.1.0",
+        "swr": "^1.3.0"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.31",
+        "@types/react": "18.0.9",
+        "@types/react-dom": "18.0.3",
+        "autoprefixer": "^10.4.7",
+        "eslint": "8.15.0",
+        "eslint-config-next": "12.1.6",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "postcss": "^8.4.13",
+        "prettier": "^2.6.2",
+        "prettier-plugin-tailwindcss": "^0.1.10",
+        "tailwindcss": "^3.0.24",
+        "typescript": "4.6.4"
+    }
 }
