--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.6.1",
+        "@heroicons/react": "^1.0.6",
         "luxon": "^2.3.2",
         "next": "12.1.6",
         "react": "18.1.0",
