--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "format:write": "npx prettier --write src/"
     },
     "dependencies": {
-        "@headlessui/react": "^1.6.1",
         "@heroicons/react": "^1.0.6",
+        "framer-motion": "^6.3.3",
         "luxon": "^2.3.2",
         "next": "12.1.6",
         "react": "18.1.0",
+        "react-click-away-listener": "^2.2.1",
         "react-dom": "18.1.0",
         "swr": "^1.3.0"
     },
